fixing border-radius on mobile & hidding close botton on desktop

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -448,12 +448,25 @@ textarea {
     overflow: auto; 
   }
 
-    div[part='button'], div[class='flex flex-row items-center w-full h-[50px] absolute top-0 left-0 z-10'], .chatbot-container {
+    div[part='button'], div[class='flex flex-row items-center w-full h-[50px] absolute top-0 left-0 z-10'], .chatbot-container, .rounded-lg {
     border-radius: 0px !important;
   }
 
 button {
   cursor: default !important;
+  }
+  
 }
 
+@media (min-width: 640px) {
+
+  .py-2.pr-3.absolute.top-0.right-\[-8px\].m-\[6px\] {
+    display: none !important;
+  
+  }
+  
+  .chatbot-button {
+    padding-right: 12px !important;
+  }
+  
 }
